Added database connectivity, modified SQL, settings now loading XML from disk.

--- a/Example Apache/httpd.conf
+++ b/Example Apache/httpd.conf
@@ -10,8 +10,8 @@ useradd -G limpygnome
 cd /
 chmod o+x srv
 cd /srv
-chown limpygnome:http_users Code
-chmod ug+rwx Code
+chown -R limpygnome:http_users Code
+chmod -R ug+rwx Code
 
 -------------------------------------------------------------------------------------
 
