--- a/Code.csproj
+++ b/Code.csproj
@@ -34,6 +34,9 @@
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Web.Services" />
+    <Reference Include="Connector">
+      <HintPath>Code\Bin\Connector.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
@@ -48,15 +51,22 @@
     <Folder Include="Code\App_Code\" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Code\App_Code\CMS\Core\Data.cs" />
-    <Compile Include="Code\App_Code\CMS\Core\PathInfo.cs" />
     <Compile Include="Code\Default.aspx.cs">
       <DependentUpon>Code\Default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Code\App_Code\CMS\Base\Data.cs" />
+    <Compile Include="Code\App_Code\CMS\Base\PathInfo.cs" />
+    <Compile Include="Code\App_Code\CMS\Base\Plugins.cs" />
+    <Compile Include="Code\App_Code\CMS\Base\Core.cs" />
+    <Compile Include="Code\App_Code\CMS\Base\Utils.cs" />
+    <Compile Include="Code\App_Code\CMS\Base\EmailQueue.cs" />
+    <Compile Include="Code\App_Code\CMS\Base\Templates.cs" />
+    <Compile Include="Code\App_Code\CMS\Base\Settings.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Code\Global.asax" />
     <Content Include="Code\web.config" />
     <Content Include="Code\Default.aspx" />
+    <Content Include="Code\CMS.config" />
   </ItemGroup>
 </Project>
