--- a/Code/CMS.config
+++ b/Code/CMS.config
@@ -14,5 +14,7 @@
 		<user>test@test.com</user>
 		<pass>password</pass>
 		<email>test@test.com</email>
+		<message_throughput>5</message_throughput>
+		<message_poll_delay>100</message_poll_delay>
 	</mail>
 </settings>
