--- a/Code/CMS.config
+++ b/Code/CMS.config
@@ -17,4 +17,7 @@
 		<message_throughput>5</message_throughput>
 		<message_poll_delay>100</message_poll_delay>
 	</mail>
+	<templates>
+		<cache>1</cache>
+	</templates>
 </settings>
