Updated README, updated configuration, added properties to many classes, added plugin cycling and other small things in places. Commit before testing the first plugin.

--- a/Code/CMS.config
+++ b/Code/CMS.config
@@ -22,5 +22,6 @@
 	</templates>
   <core>
     <default_handler>home</default_handler>
+    <cycling_interval>100</cycling_interval>
   </core>
 </settings>
