Tweaked, tested and finished initial package developer plugin; minor bug fixes elsewhere.

--- a/Code/App_Code/CMS/Plugins/Package Developer/Plugin.config
+++ b/Code/App_Code/CMS/Plugins/Package Developer/Plugin.config
@@ -1,6 +1,6 @@
 ﻿<plugin>
-  <title>Example Plugin</title>
-  <directory>App_Code/CMS/Plugins/Example</directory>
-  <class_path>CMS.Plugins.Example</class_path>
+  <title>Package Developer</title>
+  <directory>App_Code/CMS/Plugins/Package Developer</directory>
+  <class_path>CMS.Plugins.PackageDeveloper</class_path>
   <priority>0</priority>
 </plugin>
