Critical changes: upgraded uber connector library (more minor changes may occur), plugins now use a UUID instead of a pluginid, modification of comments header.

--- a/Code/App_Code/CMS/Plugins/Basic 404 Page/Plugin.config
+++ b/Code/App_Code/CMS/Plugins/Basic 404 Page/Plugin.config
@@ -1,4 +1,5 @@
 ﻿<plugin>
+  <uuid>6b1091d6-11fa-4ca1-b8cc-f38d1f266011</uuid>
   <title>Basic 404 Page</title>
   <directory>App_Code/CMS/Plugins/Basic 404 Page</directory>
   <class_path>CMS.Plugins.Basic404Page</class_path>
