--- a/Code/App_Code/CMS/Plugins/Basic Site Auth/Plugin.config
+++ b/Code/App_Code/CMS/Plugins/Basic Site Auth/Plugin.config
@@ -1,4 +1,5 @@
 ﻿<plugin>
+  <uuid>943c3f9d-dfcb-483d-bf34-48ad5231a15f</uuid>
   <title>Basic Site Auth</title>
   <directory>App_Code/CMS/Plugins/Basic Site Auth</directory>
   <class_path>CMS.Plugins.BasicSiteAuth</class_path>
