--- a/Code/App_Code/CMS/Plugins/Captcha/Plugin.config
+++ b/Code/App_Code/CMS/Plugins/Captcha/Plugin.config
@@ -1,4 +1,5 @@
 ﻿<plugin>
+  <uuid>85b9cb7f-1cf2-4f9d-ad2f-7dd073b51105</uuid>
   <title>Captcha</title>
   <directory>App_Code/CMS/Plugins/Captcha</directory>
   <class_path>CMS.Plugins.Captcha</class_path>
