--- a/Code/App_Code/CMS/Plugins/Example/Plugin.config
+++ b/Code/App_Code/CMS/Plugins/Example/Plugin.config
@@ -1,4 +1,5 @@
 ﻿<plugin>
+  <uuid>4f24426b-2329-4d65-9d6b-a2518ac7a62c</uuid>
   <title>Example Plugin</title>
   <directory>App_Code/CMS/Plugins/Example</directory>
   <class_path>CMS.Plugins.Example</class_path>
