--- a/Code/App_Code/CMS/Plugins/Package Developer/Plugin.config
+++ b/Code/App_Code/CMS/Plugins/Package Developer/Plugin.config
@@ -1,4 +1,5 @@
 ﻿<plugin>
+  <uuid>a15a3e46-985a-41e3-b12b-846108310636</uuid>
   <title>Package Developer</title>
   <directory>App_Code/CMS/Plugins/Package Developer</directory>
   <class_path>CMS.Plugins.PackageDeveloper</class_path>
