--- a/Code.csproj
+++ b/Code.csproj
@@ -77,16 +77,18 @@
     <Content Include="Code\App_Code\CMS\Plugins\Example\Plugin.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Code\App_Code\CMS\Base\UUID.cs" />
     <Compile Include="Code\App_Code\CMS\Base\SettingsNode.cs" />
     <Compile Include="Code\App_Code\CMS\Base\SQLCompiler.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic 404 Page\Basic404Page.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\BasicSiteAuth.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\User.cs" />
+    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\UserBan.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\UserGroup.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\UserGroups.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Captcha\Captcha.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Package Developer\PackageDeveloper.cs" />
-    <Compile Include="Code\App_Code\CMS\Plugins\PluginHandlerInfo.cs" />
+    <Compile Include="Code\App_Code\CMS\Base\PluginHandlerInfo.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Example\Example.cs" />
     <Compile Include="Code\Default.aspx.cs">
       <DependentUpon>Code\Default.aspx</DependentUpon>
@@ -99,7 +101,7 @@
     <Compile Include="Code\App_Code\CMS\Base\EmailQueue.cs" />
     <Compile Include="Code\App_Code\CMS\Base\Templates.cs" />
     <Compile Include="Code\App_Code\CMS\Base\Settings.cs" />
-    <Compile Include="Code\App_Code\CMS\Plugins\Plugin.cs" />
+    <Compile Include="Code\App_Code\CMS\Base\Plugin.cs" />
     <Compile Include="Code\App_Code\CMS\Base\BaseUtils.cs" />
   </ItemGroup>
   <ItemGroup>
