User IDs now use UUIDs (universally unique identifiers) (in previous commit, but extended), settings now have types for more efficient loading and storing, BSA further written, plugins adapted to new settings, package developer changed for new UUID system with plugins, a few other small changes reflected in individual class change-logs.

--- a/Code/CMS.config
+++ b/Code/CMS.config
@@ -1,26 +1,26 @@
 <settings>
 	<database>
-		<provider>mysql</provider>
-		<host>10.0.0.1</host>
-		<port>3306</port>
-		<user>arch</user>
-		<pass></pass>
-		<db>arch</db>
+		<provider type="0">mysql</provider>
+		<host type="0">10.0.0.1</host>
+		<port type="1">3306</port>
+		<user type="0">arch</user>
+		<pass type="0"></pass>
+		<db type="0">arch</db>
 	</database>
 	<mail>
-		<host>10.0.0.1</host>
-		<port>25</port>
-		<user>test@test.com</user>
-		<pass>password</pass>
-		<email>test@test.com</email>
-		<message_throughput>5</message_throughput>
-		<message_poll_delay>100</message_poll_delay>
+		<host type="0">10.0.0.1</host>
+		<port type="1">25</port>
+		<user type="0">test@test.com</user>
+		<pass type="0">password</pass>
+		<email type="0">test@test.com</email>
+		<message_throughput type="1">5</message_throughput>
+		<message_poll_delay type="1">100</message_poll_delay>
 	</mail>
 	<templates>
-		<cache>1</cache>
+		<cache type="4">1</cache>
 	</templates>
   <core>
-    <default_handler>home</default_handler>
-    <cycling_interval>100</cycling_interval>
+    <default_handler type="0">home</default_handler>
+    <cycling_interval type="1">100</cycling_interval>
   </core>
 </settings>
