--- a/Code.csproj
+++ b/Code.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Code\App_Code\CMS\Base\SQLCompiler.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic 404 Page\Basic404Page.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\BasicSiteAuth.cs" />
+    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\BSAUtils.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\User.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\UserBan.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\UserGroup.cs" />
@@ -108,7 +109,9 @@
     <Content Include="Code\Global.asax" />
     <Content Include="Code\web.config" />
     <Content Include="Code\Default.aspx" />
-    <Content Include="Code\CMS.config" />
+    <Content Include="Code\CMS.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="SQL\MySQL\Install.sql" />
     <Content Include="SQL\MySQL\Uninstall.sql" />
     <Content Include="README" />
