--- a/Code/App_Code/CMS/Plugins/Basic Site Auth/Plugin.config
+++ b/Code/App_Code/CMS/Plugins/Basic Site Auth/Plugin.config
@@ -2,6 +2,6 @@
   <uuid>943c3f9d-dfcb-483d-bf34-48ad5231a15f</uuid>
   <title>Basic Site Auth</title>
   <directory>App_Code/CMS/Plugins/Basic Site Auth</directory>
-  <class_path>CMS.Plugins.BasicSiteAuth</class_path>
+  <class_path>CMS.BasicSiteAuth.BasicSiteAuth</class_path>
   <priority>0</priority>
 </plugin>
