Fixed versioning (forgot to make static), moved database settings to be properties (for other plugins to now access), further progress with BSA.

--- a/Code/CMS.config
+++ b/Code/CMS.config
@@ -6,6 +6,7 @@
 		<user type="0">arch</user>
 		<pass type="0"></pass>
 		<db type="0">arch</db>
+    <connection_string type="0">Charset=utf8;</connection_string>
 	</database>
 	<mail>
 		<host type="0">10.0.0.1</host>
