Upgraded to connector v1.6.3.0, changed UUID to work with prepared statements using byte arrays, bug-fix to SQL compiler, overhaul of plugin handler info class, SQL changes, few other minor changes.

--- a/Code.csproj
+++ b/Code.csproj
@@ -118,8 +118,8 @@
     <Content Include="Code\CMS.config">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="SQL\MySQL\Install.sql" />
-    <Content Include="SQL\MySQL\Uninstall.sql" />
+    <Content Include="SQL\MySQL\install.sql" />
+    <Content Include="SQL\MySQL\uninstall.sql" />
     <Content Include="README" />
     <Content Include="TODO" />
     <Content Include="LICENSE" />
