Major layout changes, major plugins class changes with the identifier, major progress with BSA (logging-in, logging-out, general authentication), lots of minor changes in places, setting nodes can now have null values as a data-type, default.aspx modified to support thread aborted exception thrown by redirecting.

--- a/Code.csproj
+++ b/Code.csproj
@@ -131,6 +131,7 @@
     <Folder Include="Code\App_Code\CMS\Plugins\Articles\" />
     <Folder Include="Code\App_Code\CMS\Plugins\Basic Site Auth\content\" />
     <Folder Include="Code\App_Code\CMS\Plugins\Basic Site Auth\templates\" />
+    <Folder Include="Code\App_Code\CMS\Plugins\Captcha\templates\" />
     <Folder Include="Code\App_Code\CMS\Plugins\Downloads\" />
     <Folder Include="Code\Content\CSS\" />
   </ItemGroup>
