--- a/Code/CMS.config
+++ b/Code/CMS.config
@@ -11,11 +11,12 @@
 	<mail>
 		<host type="0">10.0.0.1</host>
 		<port type="1">25</port>
-		<user type="0">test@test.com</user>
+		<user type="0">dev@ubermeat.co.uk</user>
 		<pass type="0">password</pass>
-		<email type="0">test@test.com</email>
+		<email type="0">dev@ubermeat.co.uk</email>
 		<message_throughput type="1">5</message_throughput>
 		<message_poll_delay type="1">100</message_poll_delay>
+    <message_error_threshold type="1">3000</message_error_threshold>
 	</mail>
 	<templates>
 		<cache type="4">1</cache>
