BSA progress save: recovery system completed (not completely tested yet), my account design down, changes to SQL with recovery code, account actions added for odd functions for accounts such as verify, recovery of account etc; critical bug fixed in SQL compiler for executeUpdate.

--- a/Code.csproj
+++ b/Code.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\AuthFailedAttempt.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\BasicSiteAuth.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\BSAEmails.cs" />
+    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\AccountActions.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\BSAUtils.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\RecoveryCode.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\User.cs" />
