--- a/Code.csproj
+++ b/Code.csproj
@@ -83,19 +83,19 @@
     <Compile Include="Code\App_Code\CMS\Base\SQLCompiler.cs" />
     <Compile Include="Code\App_Code\CMS\Base\Version.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic 404 Page\Basic404Page.cs" />
-    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\AccountEvent.cs" />
-    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\AccountEventType.cs" />
-    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\AccountEventTypes.cs" />
-    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\AuthFailedAttempt.cs" />
+    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\models\AccountEvent.cs" />
+    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\models\AccountEventType.cs" />
+    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\models\AccountEventTypes.cs" />
+    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\models\AuthFailedAttempt.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\BasicSiteAuth.cs" />
-    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\BSAEmails.cs" />
+    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\Emails.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\AccountActions.cs" />
-    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\BSAUtils.cs" />
-    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\RecoveryCode.cs" />
-    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\User.cs" />
-    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\UserBan.cs" />
-    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\UserGroup.cs" />
-    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\UserGroups.cs" />
+    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\Utils.cs" />
+    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\models\RecoveryCode.cs" />
+    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\models\User.cs" />
+    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\models\UserBan.cs" />
+    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\models\UserGroup.cs" />
+    <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\models\UserGroups.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Captcha\Captcha.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\CSRF Protection\CSRFProtection.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Package Developer\PackageDeveloper.cs" />
@@ -151,7 +151,9 @@
   <ItemGroup>
     <None Include="Code\App_Code\CMS\Plugins\Basic 404 Page\files.list" />
     <Content Include="Code\App_Code\CMS\Plugins\Captcha\Plugin.config" />
-    <Content Include="Code\App_Code\CMS\Plugins\CSRF Protection\Plugin.config" />
+    <Content Include="Code\App_Code\CMS\Plugins\CSRF Protection\Plugin.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Code\installer\files.list" />
   </ItemGroup>
 </Project>
