--- a/Code/web.config
+++ b/Code/web.config
@@ -16,7 +16,7 @@
   </system.webServer>
   <system.codedom>
     <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" compilerOptions="/d:IIS,CAPTCHA,CSRFP,BSA" />
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" compilerOptions="/d:IIS,CAPTCHA,BSA,CSRFP" />
     </compilers>
   </system.codedom>
 </configuration>
