Changed the versioning of plugins, added versioning to the core for the cms/base.

--- a/Code/App_Code/CMS/Plugins/Basic Site Auth/Plugin.config
+++ b/Code/App_Code/CMS/Plugins/Basic Site Auth/Plugin.config
@@ -4,4 +4,7 @@
   <directory>App_Code/CMS/Plugins/Basic Site Auth</directory>
   <class_path>CMS.BasicSiteAuth.BasicSiteAuth</class_path>
   <priority>0</priority>
+  <version_major>1</version_major>
+  <version_minor>0</version_minor>
+  <version_build>0</version_build>
 </plugin>
