--- a/Code/App_Code/CMS/Plugins/Package Developer/Plugin.config
+++ b/Code/App_Code/CMS/Plugins/Package Developer/Plugin.config
@@ -4,4 +4,7 @@
   <directory>App_Code/CMS/Plugins/Package Developer</directory>
   <class_path>CMS.Plugins.PackageDeveloper</class_path>
   <priority>0</priority>
+  <version_major>1</version_major>
+  <version_minor>0</version_minor>
+  <version_build>0</version_build>
 </plugin>
