--- a/Code/CMS.config
+++ b/Code/CMS.config
@@ -25,4 +25,9 @@
     <default_handler type="0">home</default_handler>
     <cycling_interval type="1">100</cycling_interval>
   </core>
+  <version>
+    <major type="1">1</major>
+    <minor type="1">0</minor>
+    <build type="1">0</build>
+  </version>
 </settings>
