BA progress save (base is down, models are being done); upgraded to connector v1.6.4.0, overhaul of URL rewriting (may move uninstall to UrlRewriting class), UUID now parses only (removal of createFromHex methods), UUID now has stronger validation.

--- a/Code.csproj
+++ b/Code.csproj
@@ -80,11 +80,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Code\App_Code\CMS\Base\TemplateHandler.cs" />
+    <Compile Include="Code\App_Code\CMS\Base\UrlRewriting.cs" />
     <Compile Include="Code\App_Code\CMS\Base\UUID.cs" />
     <Compile Include="Code\App_Code\CMS\Base\SettingsNode.cs" />
     <Compile Include="Code\App_Code\CMS\Base\SQLCompiler.cs" />
     <Compile Include="Code\App_Code\CMS\Base\Version.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic 404 Page\Basic404Page.cs" />
+    <Compile Include="Code\App_Code\CMS\Plugins\Basic Articles\BasicArticles.cs" />
+    <Compile Include="Code\App_Code\CMS\Plugins\Basic Articles\Constants.cs" />
+    <Compile Include="Code\App_Code\CMS\Plugins\Basic Articles\models\Article.cs" />
+    <Compile Include="Code\App_Code\CMS\Plugins\Basic Articles\models\ArticleThread.cs" />
+    <Compile Include="Code\App_Code\CMS\Plugins\Basic Articles\models\ArticleThreadPermissions.cs" />
+    <Compile Include="Code\App_Code\CMS\Plugins\Basic Articles\models\ArticleThreadViews.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\AET_Render.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\models\AccountEvent.cs" />
     <Compile Include="Code\App_Code\CMS\Plugins\Basic Site Auth\models\AccountEventType.cs" />
@@ -133,12 +140,15 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Code\App_Code\CMS\Plugins\Admin Panel\" />
+    <Folder Include="Code\App_Code\CMS\Plugins\AJAX Navigation\" />
     <Folder Include="Code\App_Code\CMS\Plugins\Basic Articles\content\" />
     <Folder Include="Code\App_Code\CMS\Plugins\Basic Articles\templates\" />
     <Folder Include="Code\App_Code\CMS\Plugins\Basic Site Auth\content\" />
     <Folder Include="Code\App_Code\CMS\Plugins\Basic Site Auth\templates\" />
     <Folder Include="Code\App_Code\CMS\Plugins\Captcha\templates\" />
+    <Folder Include="Code\App_Code\CMS\Plugins\Comments\" />
     <Folder Include="Code\App_Code\CMS\Plugins\Downloads\" />
+    <Folder Include="Code\App_Code\CMS\Plugins\Gallery\" />
     <Folder Include="Code\Content\CSS\" />
   </ItemGroup>
   <ItemGroup>
