--- a/Code/App_Code/CMS/Plugins/Basic Articles/Plugin.config
+++ b/Code/App_Code/CMS/Plugins/Basic Articles/Plugin.config
@@ -2,7 +2,7 @@
   <uuid>4812e9b5-daff-4d7c-a796-ec0c17b167cc</uuid>
   <title>Basic Articles</title>
   <directory>App_Code/CMS/Plugins/Basic Articles</directory>
-  <class_path>CMS.BasicArticles</class_path>
+  <class_path>CMS.BasicArticles.BasicArticles</class_path>
   <priority>0</priority>
   <version_major>1</version_major>
   <version_minor>0</version_minor>
