--- a/Code/CMS.config
+++ b/Code/CMS.config
@@ -5,7 +5,7 @@
 		<port type="1">3306</port>
 		<user type="0">arch</user>
 		<pass type="0"></pass>
-		<db type="0">arch</db>
+		<db type="0">ubercmsv2</db>
     <connection_string type="0">Charset=utf8;</connection_string>
 	</database>
 	<mail>
