Finished createFetch in ArticleThread model for Basic Articles plugin; other minor changes around the CMS; switched database for dev to 127.0.0.1; commit from laptop, may be dodgy and need roll-back.

--- a/Code/CMS.config
+++ b/Code/CMS.config
@@ -1,9 +1,9 @@
 <settings>
 	<database>
 		<provider type="0">mysql</provider>
-		<host type="0">10.0.0.1</host>
+		<host type="0">127.0.0.1</host>
 		<port type="1">3306</port>
-		<user type="0">arch</user>
+		<user type="0">root</user>
 		<pass type="0"></pass>
 		<db type="0">ubercmsv2</db>
     <connection_string type="0">Charset=utf8;</connection_string>
