More improvements whilst travelling; added E-mail model to Core.Base, yet to be implemented (needs testing, incomplete - despite change-log).

--- a/Code.csproj
+++ b/Code.csproj
@@ -80,6 +80,7 @@
     <Content Include="Code\App_Code\CMS\Plugins\Example\Plugin.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Code\App_Code\CMS\Base\Email.cs" />
     <Compile Include="Code\App_Code\CMS\Base\TemplateHandler.cs" />
     <Compile Include="Code\App_Code\CMS\Base\UrlRewriting.cs" />
     <Compile Include="Code\App_Code\CMS\Base\UUID.cs" />
