--- a/Code/CMS.config
+++ b/Code/CMS.config
@@ -6,7 +6,7 @@
 		<user type="0">root</user>
 		<pass type="0"></pass>
 		<db type="0">ubercmsv2</db>
-    <connection_string type="0">Charset=utf8;</connection_string>
+    <connection_string type="0">charset=utf8;</connection_string>
 	</database>
 	<mail>
 		<host type="0">10.0.0.1</host>
